--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,11 @@ news_sites:
     url: http://www.eluniversal.com.mx
     queries:
       homepage_article_links: '.ce2-Tipo1_Titulo a'
+      article_body: '.field-name-body'
+      article_title: '.Encabezado-Articulo h1'
   elpais:
     url: https://elpais.com
     queries:
       homepage_article_links: '.headline a'
+      article_body: ''
+      article_title: ''
