--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,13 @@
 news_sites:
-  eluniversal: 
+  eluniversal:
     url: http://www.eluniversal.com.mx
     queries:
-      homepage_article_links: '.ce2-Tipo1_Titulo a'
+      homepage_article_links: '.field-content a'
       article_body: '.field-name-body'
-      article_title: '.Encabezado-Articulo h1'
-    
+      article_title: '.pane-content h1'
   elpais:
     url: https://elpais.com
     queries:
-      homepage_article_links: '.headline a'
-      article_body: ''
-      article_title: ''
+      homepage_article_links: 'article h2 a'
+      article_body: 'article p'
+      article_title: 'article h2 a'
